[tool.poetry]
name = "python-demo"
version = "0.1.0"
description = ""
authors = ["Charlie <hi@appseccharlie.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.32.4"  # Vulnerable top-level dependency
flask = "3.1.1"  # Top-level dependency with a vulnerable transitive dependency

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
